2006-10-17  arjan <arjan at yirdis dot nl>

        * gaphor/adapters/editor.py: Added Association editor.

2006-09-29  arjan <arjan at yirdis dot nl>

        * gaphor/actions/placementactions.py: enabled Association
        * gaphor/diagram/association.py: partly works w/ gaphas
        * gaphor/diagram/items.py: added association

2006-09-27  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/artifact.py: works now
        * gaphor/diagram/component.py: works now
        * gaphor/diagram/node.py: works now

2006-09-26  arjan <arjan at yirdis dot nl>

        * gaphor/UML/elementfactory.py: select() now returns an iterator
        * gaphor/actions/itemactions.py:
        * gaphor/actions/placementactions.py: placement for ExtensionItem
        * gaphor/actions/tests/test_placementactions.py: ... and tests
        * gaphor/adapters/connectors.py: Connector for ExtensionItem
        * gaphor/adapters/tests/test_connector.py:
        * gaphor/diagram/diagramitem.py: removed set_subject()
        * gaphor/diagram/extension.py: works
        * setup.py: added unittest

2006-09-20  arjan <arjan at yirdis dot nl>

        * utils/genUML.py: Removed.
        * gaphor/ui/objectinspector.py: Use classes for adaption, in stead
        of interfaces. Also removed interfaces from
        gaphor/diagram/interfaces.py.
        * gaphor/diagram/interfaces.py: cleaned up IDiagramElement interfaces.
        * gaphor/ui/objectinspector.py: Updated to use classes iso interfaces

2006-09-19  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/items.py: New file. Gathered all *Item imports here
        (used to be in gaphor/diagram/__init__.py)
        * gaphor/actions/placementactions.py: Added actions for Include/Extends
        * gaphor/actions/tests/test_placementactions.py: .. and tests
        * gaphor/adapters/connectors.py: added connectors for Generalization,
        Inlcude, Extend.
        * gaphor/diagram/dependency.py: Cleanup