@@ -1,3 +1,8 @@
+2006-10-24  arjan <arjan at yirdis dot nl>
+
+        * gaphor/diagram/association.py: Made direction and name drawing work.
+        * gaphor/diagram/diagramline.py: make lines easier to select (fuzzyness)
+
 2006-10-17  arjan <arjan at yirdis dot nl>
 
         * gaphor/adapters/editor.py: Added Association editor.
